0.29	2023-10-12
    * Work around groff-1.24

0.28	2022-01-01
    * It is 2021 - No changes in 2021
    * It is 2022

0.27	2020-12-23
    * Some man pages are not the same as other man pages

0.26	2020-12-17
    * Fix META to include bugtracker

0.25	2020-04-14
    * Require List::Util for consistency
    * Add static docs for github
    * Allow multiple -s ID

0.24	2020-04-10
    * Switch to Pod::Text when nroff is not available

0.23	2020-04-09
    * Move pod tests to xt
    * Add simple tests for basic CLI
    * Make ping-list-length settable
    * Do not truncate server list when a specific server is selected
    * It's 2020

0.22	2019-09-02
    * Add --list-cc
    * Add cpanfile
    * Add -U / --skip-undef
    * Provide cpanfile
    * Add help and options to examples/speedtest-graph.pl
    * Fix warning when using --no-upload or --no-download (issue#13)

0.21	2019-03-21
    * Add --csv-eol-unix

0.20	2019-01-01
    * Versions
    * It's 2017
    * Show a ranked summary of the tries with --try
    * It's 2018
    * Deal with proxy settings in env
    * Add index to list/ping lists
    * It's 2019

0.19	2016-01-02
    * Try multiple addresses for the server list RT#110400
    * It's 2016

0.18	2015-10-10
    * Add --prtg option
    * Add --bytes option
    * Cleanup code to calculate average

0.17	2015-03-27
    * Add graph example
    * Update version in .pm

0.16	2015-02-11
    * Set a limit of 40 of the number of hosts to ping
    * Remove perl recommendation from META as it breaks cpan clients

0.15	2015-01-15
    * Renamed to speedtest
    * Do not report/show origin on --list & --ping
    * Documentation/Manual + --man and --info
    * Put on CPAN

0.12	2015-01-24
    * Add --csv
    * Update README

0.11	2015-01-21
    * Add --timeout
    * Update copyright
    * Warning about speedtest not being ping
    * Data::Peek optional (but still recommended)
    * Fallback to distance in absence of GEO-IP

0.10	2014-12-17
    * Add latency for --mini and --url